# Agivant-assignment

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  understand.md
docs/: REPORT.md  SETUP.md  TestExecutionReport.xlsx  TestPlan.md  TestPlan.xlsx  TraceabilityMatrix.xlsx  install_conf.template.json  report.html
docs/findings/: BUG-001.docx  BUG-001.md  BUG-002.docx  BUG-002.md  BUG-003.docx  BUG-003.md  BUG-004.docx  BUG-004.md  FIND-001-partition-availability-flapping.md  FIND-001.docx  FIND-002-ambiguous-writes-under-partition.md  FIND-002.docx
results/: ha_component_gpe.json  ha_kill_tg1.json  ha_kill_tg2.json  ha_partition_tg3.json  ha_pause_tg3.json  ha_stop_tg2.json  ha_wkill_tg3.json  ha_wpartition_tg2.json  mttr_summary.json  noha_component_gpe.json  noha_kill_tg1.json  noha_kill_tg2.json  noha_partition_tg3.json  noha_pause_tg3.json  noha_stop_tg2.json  noha_svcfail_tg2.json  noha_wkill_tg3.json  noha_wpartition_tg2.json
results/runs/: ha_component_gpe_r1.json  ha_component_gpe_r2.json  ha_component_gpe_r3.json  ha_kill_tg1_r1.json  ha_kill_tg1_r2.json  ha_kill_tg1_r3.json  ha_kill_tg2_r1.json  ha_kill_tg2_r2.json  ha_kill_tg2_r3.json  (+9 more)
scripts/: 01-install.sh  build_deliverables.py  build_report.py  lib.sh  load-sample-graph.sh  measure_mttr.py
tests/: conftest.py  test_config_change.py  test_gsql_queries.py  test_loading_job.py  test_negative_boundary.py  test_node_failures.py  test_service_health.py  test_write_durability.py
tigergraph_ha/: __init__.py  cluster.py  faults.py  probe.py  scenario.py
(+3 files in other folders)
